--- a/dev_docs/tutorials/building_a_kibana_distributable.mdx
+++ b/dev_docs/tutorials/building_a_kibana_distributable.mdx
@@ -18,28 +18,70 @@ yarn build --help
 
 ## Prerequisites
 
-For the general aspects of the build we only require you to use one of the following operating systems:
+For the basic steps of the build we only require you to use one of the following operating systems:
 
 - Linux
 - macOS
 
-In case you want to build OS Packages there are other things to have in mind. Packages are built using fpm, dpkg, rpm, and Docker.
-Please make sure you have those dependencies installed using:
+However if as part of the build you also want to generate Linux installation packages (deb, rpm) or Docker images there 
+are other dependencies to have in mind as those installation packages and docker images generation are run using fpm, dpkg, rpm, and Docker.
+
+### For Linux Installation Packages Build
+
+Please make sure you have the following dependencies installed:
+
+#### Install FPM dependencies
+
+**On OSX/macOS:**
 
 ```bash
-apt-get install ruby ruby-dev rpm dpkg build-essential
+brew install gnu-tar
+```
+
+**On Red Hat systems (Fedora 22 or older, CentOS, etc):**
+
+```bash
+yum install ruby-devel gcc make rpm-build rubygems
+```
+
+**On Fedora 23 or newer:**
+
+```bash
+dnf install ruby-devel gcc make rpm-build libffi-devel
+```
+
+**On Oracle Linux 7.x systems:**
+
+```bash
+yum-config-manager --enable ol7_optional_latest
+yum install ruby-devel gcc make rpm-build rubygems
+```
+
+**On Debian-derived systems (Debian, Ubuntu, etc):**
+
+```bash
+apt-get install ruby ruby-dev rubygems build-essential
+```
+
+#### Install FPM
+
+Finally install fpm with the gem tool with:
+
+```bash
 gem install fpm -v 1.5.0
 ```
 
+### For Docker Images Build
+
 For Docker, the installation instructions can be found at [Install Docker Engine](https://docs.docker.com/engine/install/).
 
-> NOTE: OS Packages building has only been tested on Linux and may not be fully supported on any other platform. 
 
+## Create a Kibana distributable
 
-## Create a simple Kibana distributable
+In a great majority of the use cases where we need to build a Kibana distributable, we just need the archives containng the 
+node executable and the bundled code of the application.
 
-In a great majority of the use cases where we need to build a Kibana distributable, we can live with a simple version of it.
-That version is quicker, easier to achieve easy and building OS Packages will be excluded. 
+By doing that Linux installation packages and docker images will be excluded and as a result, the build will be quicker.
 
 We can do it by simply running:
 
@@ -66,20 +108,20 @@ To turn it off you can run the build along `--no-debug` flag. At that point that
 
 For a longer and verbose logging than `debug` there is other option that can be passed along the build command which is `--verbose`.
 
-## Create a Kibana distributable and build OS Packages
+## Create a Kibana distributable with Linux installation packages and Docker images
 
-If you are running a Linux OS there is also the option to create a Kibana distributable including the build of specific OS packages 
-like rpm, deb or docker.
+If you comply with every prerequisite and dependency listed above, then there is also the option to create a Kibana distributable along with 
+Linux installation packages like rpm and deb or docker images.
 
-As far as all the above mentioned prerequisites have been followed, you can just run:
+To achieve it, you can run:
 
 ```bash
 yarn build
 ```
 
-At the end you will get a Kibana distributable including a docker image and both an rpm and a deb package.
+At the end you will get the Kibana distributable archives plus the docker images and both an rpm and a deb package.
 
-To specify a package to build you can add rpm, deb or docker-images as an argument:
+To specify just a single installation package or docker iamges to build instead of all of them you can add rpm, deb or docker-images as an argument:
 
 ```bash
 yarn build --deb
@@ -87,7 +129,7 @@ yarn build --rpm
 yarn build --docker-images
 ```
 
-Again the distributable packages can be found in a `target` folder created relative to the repository after the build completes.
+Again the distributable contents resulting from running the build command can be found in a `target` folder created relative to the repository after the build completes.
 It will look something like: 
 
 ![Target Folder Outlook With a Kibana Distributable And OS Packages](../assets/target_folder_with_a_kibana_distributable_and_os_packages.png)
