--- a/docs/CHANGELOG.asciidoc
+++ b/docs/CHANGELOG.asciidoc
@@ -195,6 +195,8 @@ To display the cluster data in *Discover*, load documents directly from `_source
 [[known-issues-v7.12.0]]
 === Known issues
 
+*Saved object migrations*
+
 When upgrading to 7.12.0, {kib} retries failed saved object migrations without user intervention.
 
 Impacts include:
@@ -207,6 +209,19 @@ Impacts include:
 * Incompatible `xpack.tasks.index` configuration setting.
 
 If your upgrade migration fails repeatedly, refer to {kibana-ref}/upgrade-migrations.html#preventing-migration-failures[preventing migration failures].
+
+*Cluster performance degradation*
+
+Details:
+
+{kib} fails to update and delete {kibana-ref}/search-sessions.html[search sessions objects] created in non-default spaces.
+
+Impact:
+Cluster performance degrades due to a flooding of async search API usage.
+For information on the workaround for 7.12.0, refer to {kibana-issue}96124[#96124].
+
+For information on the fix in 7.12.1, refer to {kibana-pull}96123[#96123]. 
+
 
 // end::known-issues[]
 
