--- a/docs/setup/upgrade/upgrade-migrations.asciidoc
+++ b/docs/setup/upgrade/upgrade-migrations.asciidoc
@@ -152,6 +152,7 @@ In order to rollback after a failed upgrade migration, the saved object indices 
 ===== Rollback by restoring a backup snapshot:
 
 1. Before proceeding, {ref}/snapshots-take-snapshot.html[take a snapshot] that contains the `kibana` feature state.
+   Snapshots include this feature state by default.
 2. Shutdown all {kib} instances to be 100% sure that there are no instances currently performing a migration.
 3. Delete all saved object indices with `DELETE /.kibana*`
 4. {ref}/snapshots-restore-snapshot.html[Restore] the `kibana` feature state from the snapshot.
