--- a/docs/developer/architecture/core/uisettings-service.asciidoc
+++ b/docs/developer/architecture/core/uisettings-service.asciidoc
@@ -5,7 +5,7 @@ NOTE: The UI settings service is available both server and client side.
 
 === Overview
 
-UI settings are confuigurable from the Advanced Settings page in Management and control the behavior of {kib}. uiSettings are stored in a config saved object and, as such, conform to the same conditions as other saved objects.
+UI settings are configurable from the Advanced Settings page in Management and control the behavior of {kib}. uiSettings are stored in a config saved object and, as such, conform to the same conditions as other <<saved-objects-service, Saved Objects>>.
 
 There are several ways to configure an advanced setting:
 
@@ -18,19 +18,17 @@ Keep in mind that once you add a new advanced setting, you cannot change or remo
 
 [[advanced-settings-ui]]
 === Configuration with Advanced Settings UI
-The uiSettings service is the programmatic interface to Kibana's Advanced Settings UI. Kibana plugins use the service to extend Kibana UI Settings Management with custom settings for thei plugin.
+The uiSettings service is the programmatic interface to Kibana's Advanced Settings UI. Kibana plugins use the service to extend Kibana UI Settings Management with custom settings for their plugin.
 
 Configuration through the Advanced Settings UI is restricted to users authorised to acces the Advanced Settings page. Users who don't have permissions to change these values default to using the settings configured to the space they are in. Config saved objects can be shared between spaces.
 
 [[uisettings-overrides]]
-==== Overrides
-When a setting is configured as an override in kibana.yml, it will override any other value stored in the config saved object. If an override is misconfigured, it will fail config validation and will prevent Kibana from starting up. The override applies to Kibana as a whole for all spaces and users and the option will be disabled in the Advanced Settings page. We refer to these as "global" overrides.
+==== Configuration with UI settings overrides
+When a setting is configured as an override in kibana.yml, it will override any other value stored in the config saved object. If an override is misconfigured, it will fail config validation and prevent Kibana from starting up. The override applies to Kibana as a whole for all spaces and users and the option will be disabled in the Advanced Settings page. We refer to these as "global" overrides.
 
 [[client-side-usage]]
 === Client side usage
-On the client, the `uiSettings` service is exposed directly from `core`.
-
-Users can adjust the settings via Management Advanced Settings UI. The client-side `uiSettings` {kib-repo}blob/{branch}/docs/development/core/public/kibana-plugin-core-public.iuisettingsclient.md[client] provides plugins access to the `config` entries stored in {es}.
+On the client, the `uiSettings` service is exposed directly from `core` and the {kib-repo}blob/{branch}/docs/development/core/public/kibana-plugin-core-public.iuisettingsclient.md[client] provides plugins access to the `config` entries stored in {es}.
 
 In the interest of performance, `uiSettings` are cached. Any changes that require cache refreshes should register an instruction to reload the page when settings are configured in Advanced Settings using the `requiresPageReload` {kib-repo}blob/{branch}/docs/development/core/public/kibana-plugin-core-public.uisettingsparams.md[parameter].
 
@@ -69,7 +67,7 @@ export class MyPlugin implements Plugin<MyPluginSetup, MyPluginStart> {
 === Server side usage
 On the server, `uiSettings` are exposed directly from `core`.
 
-The following example shows how to {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsservicesetup.register.md[register] a new `uiSetting` that will surface a `Custom` setting with a default value of '42'.
+The following example shows how to {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsservicesetup.register.md[register] a new `custom` setting with a default value of '42'. When registering a new setting, you must provide a schema against which validations are performed on read and write. All {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsparams.md[parameters][other parameters] are optional.
 
 [source,typescript]
 ----
@@ -98,11 +96,17 @@ export class MyPlugin implements Plugin {
 
 ----
 
-Registration only requires a schema for validation on read and write, all other {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsparams.md[parameters] are optional.
-
 [[uisettings-migrations]]
 ==== Migrations
-To change or remove a `uiSetting`, the whole `config` saved object needs to be migrated. For example, if we wanted to remove a `custom` setting, or rename `my_setting:fourtyTwo` to `my_other_setting:fourtyTwo`, we'd need two migration entries, one for each change targeting the version in which these changes apply:
+
+[IMPORTANT]
+==============================================
+Migrations for 3rd party plugin advanced settings is not currently supported. If a 3rd party plugin registers an advanced setting, the setting is essentially permanent and cannot be fixed without a manual intervention.
+==============================================
+
+To change or remove a `uiSetting`, the whole `config` saved object needs to be migrated. `uiSettings` {kib-repo}blob/{branch}/src/core/server/ui_settings/saved_objects/migrations.ts[migrations] are declared directly in the service.
+
+For example, if we wanted to remove a `custom` setting, or rename `my_setting:fourtyTwo` to `my_other_setting:fourtyTwo`, we'd need two migration entries, one for each change targeting the version in which these changes apply:
 [source,typescript]
 ----
 export const migrations = {
@@ -150,5 +154,6 @@ export const migrations = {
   …
 }
 ----
-`uiSettings` {kib-repo}blob/{branch}/src/core/server/ui_settings/saved_objects/migrations.ts[migrations] are declared directly in the service.
+
+Plugins can leverage the optional deprecation parameter on registration for handling deprecation notices and renames. The deprecation warnings are rendered in the Advanced Settings UI. Please remember that we also need to warn about future deprecations in the Configure Kibana guide.
 
