--- a/docs/developer/architecture/core/uisettings-service.asciidoc
+++ b/docs/developer/architecture/core/uisettings-service.asciidoc
@@ -23,7 +23,7 @@ The uiSettings service is the programmatic interface to Kibana's Advanced Settin
 Configuration through the Advanced Settings UI is restricted to users authorised to acces the Advanced Settings page. Users who don't have permissions to change these values default to using the settings configured to the space they are in. Config saved objects can be shared between spaces.
 
 [[uisettings-overrides]]
-==== Configuration with UI settings overrides
+=== Configuration with UI settings overrides
 When a setting is configured as an override in kibana.yml, it will override any other value stored in the config saved object. If an override is misconfigured, it will fail config validation and prevent Kibana from starting up. The override applies to Kibana as a whole for all spaces and users and the option will be disabled in the Advanced Settings page. We refer to these as "global" overrides.
 
 [[client-side-usage]]
@@ -67,7 +67,7 @@ export class MyPlugin implements Plugin<MyPluginSetup, MyPluginStart> {
 === Server side usage
 On the server, `uiSettings` are exposed directly from `core`.
 
-The following example shows how to {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsservicesetup.register.md[register] a new `custom` setting with a default value of '42'. When registering a new setting, you must provide a schema against which validations are performed on read and write. All {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsparams.md[parameters][other parameters] are optional.
+The following example shows how to {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsservicesetup.register.md[register] a new `custom` setting with a default value of '42'. When registering a new setting, you must provide a schema against which validations are performed on read and write. All the other {kib-repo}blob/{branch}/docs/development/core/server/kibana-plugin-core-server.uisettingsparams.md[parameters] are optional.
 
 [source,typescript]
 ----
@@ -97,16 +97,17 @@ export class MyPlugin implements Plugin {
 ----
 
 [[uisettings-migrations]]
-==== Migrations
+=== Migrations
 
 [IMPORTANT]
 ==============================================
-Migrations for 3rd party plugin advanced settings is not currently supported. If a 3rd party plugin registers an advanced setting, the setting is essentially permanent and cannot be fixed without a manual intervention.
+Migrations for 3rd party plugin advanced settings are not currently supported. If a 3rd party plugin registers an advanced setting, the setting is essentially permanent and cannot be fixed without manual intervention.
 ==============================================
 
 To change or remove a `uiSetting`, the whole `config` saved object needs to be migrated. `uiSettings` {kib-repo}blob/{branch}/src/core/server/ui_settings/saved_objects/migrations.ts[migrations] are declared directly in the service.
 
 For example, if we wanted to remove a `custom` setting, or rename `my_setting:fourtyTwo` to `my_other_setting:fourtyTwo`, we'd need two migration entries, one for each change targeting the version in which these changes apply:
+
 [source,typescript]
 ----
 export const migrations = {
@@ -116,8 +117,8 @@ export const migrations = {
   ...(doc.attributes && {
     attributes: Object.keys(doc.attributes).reduce(
       (acc, key) =>
-        [ // other settings to remove for 8.1.0...
-          // owner: Team:Custom setting team owner
+        [ 
+          // other settings to remove for 8.1.0...
           'custom',
         ].includes(key)
           ? {
@@ -155,5 +156,7 @@ export const migrations = {
 }
 ----
 
-Plugins can leverage the optional deprecation parameter on registration for handling deprecation notices and renames. The deprecation warnings are rendered in the Advanced Settings UI. Please remember that we also need to warn about future deprecations in the Configure Kibana guide.
-
+[TIP]
+==============================================
+Plugins can leverage the optional deprecation parameter on registration for handling deprecation notices and renames. The deprecation warnings are rendered in the Advanced Settings UI and should also be added to the Configure Kibana guide.
+==============================================
