--- a/docs/setup/upgrade.asciidoc
+++ b/docs/setup/upgrade.asciidoc
@@ -51,7 +51,9 @@ a|
 
 [WARNING]
 ====
-The upgrade path from 6.8 to 7.0 is *not* supported.
+Upgrading from 6.8 to 7.0 is *not* supported.
+You must upgrade directly to 7.1 or later.
+We recommend upgrading the latest 7.n release. 
 ====
 
 [float]
@@ -75,7 +77,7 @@ Before you upgrade {kib}:
 
 To identify the changes you need to make to upgrade, and to enable you to
 perform an Elasticsearch rolling upgrade with no downtime, you must upgrade to
-6.7 before you upgrade to 7.0.
+6.8 before you upgrade to 7.1 or later.
 
 For a comprehensive overview of the upgrade process, refer to
 *{stack-ref}/upgrading-elastic-stack.html[Upgrading the Elastic Stack]*.
@@ -85,7 +87,7 @@ For a comprehensive overview of the upgrade process, refer to
 [[upgrade-5x-earlier]]
 === Upgrade from 5.x or earlier
 {es} can read indices created in the previous major version. Before you upgrade
-to 7.0.0, you must reindex or delete any indices created in 5.x or earlier.
+to 7.x, you must reindex or delete any indices created in 5.x or earlier.
 For more information, refer to
 {stack-ref}/upgrading-elastic-stack.html#oss-stack-upgrade[Upgrading the Elastic Stack].
 
@@ -96,21 +98,29 @@ instructions.
 [[upgrade-6x]]
 === Upgrade from 6.x
 
-The recommended path is to upgrade to 6.8 before upgrading to 7.0. This makes it
+The recommended path is to upgrade to 6.8 before upgrading to 7.n. This makes it
 easier to identify the required changes, and enables you to use the Upgrade
-Assistant to prepare for your upgrade to 7.0.
+Assistant to prepare for your upgrade.
 
-TIP: The ability to import {kib} 6.x saved searches, visualizations, and
-dashboards is supported.
+IMPORTANT: Upgrading from 6.8 to 7.0 is not supported. 
+You must upgrade directly to 7.1 or later. 
+We recommend upgrading to the latest 7.n release.
+
+You can import {kib} 6.x saved searches, visualizations, and
+dashboards in 7.x.
 
 [float]
 [[upgrade-67]]
 === Upgrade from 6.8
-To help you prepare for your upgrade to 7.0, 6.8 includes an https://www.elastic.co/guide/en/kibana/6.8/upgrade-assistant.html[Upgrade Assistant]
+To help you prepare for your upgrade to 7.n, 6.8 includes an https://www.elastic.co/guide/en/kibana/6.8/upgrade-assistant.html[Upgrade Assistant]
 To access the assistant, go to *Management > 7.0 Upgrade Assistant*.
 
+IMPORTANT: Upgrading from 6.8 to 7.0 is not supported. 
+You must upgrade directly to 7.1 or later. 
+We recommend upgrading to the latest 7.n release.
+
 After you have addressed any issues that were identified by the Upgrade
-Assistant, <<upgrade-standard,upgrade to 7.0>>.
+Assistant, <<upgrade-standard,upgrade to 7.n>>.
 
 [float]
 === Known issues
