--- a/docs/redirects.asciidoc
+++ b/docs/redirects.asciidoc
@@ -386,7 +386,7 @@ This content has moved. Refer to <<managing-data-views>>.
 
 This content has moved. Refer to <<kibana-role-management>>.
 
-[role="exclude" id="logging-configuration-changes"]
+[role="exclude",id="logging-configuration-changes"]
 == Logging configuration changes
 
 This content has moved. Refer to <<logging-config-changes>>.
